# sf-settings-menu

./: .gitignore  Cargo.toml  README.md  build.rs
src/: create_plugin.rs  lib.rs  settings.rs
src/modules/: audio.rs  controls.rs  gameplay.rs  interface.rs  mod.rs  utils.rs  video.rs
